<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/yourLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/yourLocation"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/latitude"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.166" />

    <TextView
        android:id="@+id/latitudeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/locationLatitudeTitle"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/trackingButton"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.23" />

    <TextView
        android:id="@+id/latitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/defaultInfo"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/trackingButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/latitudeTitle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.228" />

    <TextView
        android:id="@+id/longitudeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/locationLongitudeTitle"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/trackingButton"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/latitudeTitle"
        app:layout_constraintVertical_bias="0.049" />

    <TextView
        android:id="@+id/longitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/defaultInfo"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/trackingButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/longitudeTitle"
        app:layout_constraintTop_toBottomOf="@id/latitudeTitle"
        app:layout_constraintVertical_bias="0.047" />

    <TextView
        android:id="@+id/accuracyTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/accuracyTitle"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/trackingButton"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/longitudeTitle"
        app:layout_constraintVertical_bias="0.048" />

    <TextView
        android:id="@+id/accuracy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/defaultInfo"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/trackingButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/accuracyTitle"
        app:layout_constraintTop_toBottomOf="@id/longitudeTitle"
        app:layout_constraintVertical_bias="0.045" />

    <TextView
        android:id="@+id/homeLocationTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/homeLocationTitle"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/trackingButton"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.632" />

    <TextView
        android:id="@+id/homeLocationLatitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/defaultInfo"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toTopOf="@id/homeLocationLongitude"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeLocationTitle"
         />

    <TextView
        android:id="@+id/homeLocationLongitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/defaultInfo"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeLocationLatitude"
         />

    <Button
        android:id="@+id/trackingButton"
        android:layout_width="230sp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:fadingEdge="horizontal"
        android:fontFamily="sans-serif"
        android:onClick="OnTrackLocationButtonClick"
        android:text="@string/trackingButtonStart"
        android:textColor="#ffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <Button
        android:id="@+id/setHomeButton"
        android:layout_width="230sp"
        android:layout_height="wrap_content"
        android:background="@color/grey"
        android:clickable="false"
        android:fontFamily="sans-serif"
        android:onClick="OnSetHomeButtonClick"
        android:text="@string/setHomeButton"
        android:textColor="#ffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/trackingButton"
        app:layout_constraintVertical_bias="0.148" />

    <Button
        android:id="@+id/clearHomeButton"
        android:layout_width="230sp"
        android:layout_height="wrap_content"
        android:background="@color/grey"
        android:clickable="false"
        android:fontFamily="sans-serif"
        android:onClick="OnClearHomeButtonClick"
        android:text="@string/clearHomeButton"
        android:textColor="#ffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/setHomeButton"
        app:layout_constraintVertical_bias="0.053" />

    <Button
        android:id="@+id/deletePhoneButton"
        android:layout_width="230sp"
        android:layout_height="wrap_content"
        android:background="@color/grey"
        android:clickable="false"
        android:fontFamily="sans-serif"
        android:onClick="OnDeletePhoneButtonClick"
        android:text="@string/delete_phone"
        android:textColor="#ffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clearHomeButton"
        app:layout_constraintVertical_bias="0.069" />

    <Button
        android:id="@+id/setPhoneButton"
        android:layout_width="230sp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:clickable="true"
        android:fontFamily="sans-serif"
        android:onClick="OnSmsButtonClick"
        android:text="@string/set_phone"
        android:textColor="#ffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/deletePhoneButton"
        app:layout_constraintVertical_bias="0.116" />


</androidx.constraintlayout.widget.ConstraintLayout>